Bug 157092 - Using search feature in options dialog causes crash when NVDA is running
Summary: Using search feature in options dialog causes crash when NVDA is running
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2023-09-04 17:35 UTC by Michael Weghorn
Modified: 2023-09-09 19:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-09-04 17:35:53 UTC
Steps to reproduce:

1) start the NVDA screen reader on Windows
2) start Writer
3) Tools -> Options
4) type "hello" in the newly addes search field
5) press Enter

Result: LO crashes due to an exception being thrown:

warn:svx:5688:9000:svtools/source/control/valueacc.cxx:953: Calling disposed object. Throwing exception:

Behavior is the same with qt6 on Linux, but not with gen (which doesn't have an a11y implementation) or gtk3 (which likely uses native gtk widgets).

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 21af3e5b5df02747691f08c453407d0abfc91242
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2023-09-07 07:36:59 UTC
Pending Gerrit change:
https://gerrit.libreoffice.org/c/core/+/156645
Comment 2 Commit Notification 2023-09-07 11:13:36 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f5e7a07775690e57d639eeca7a1e41733fa93a9

tdf#157092 a11y Let only drawing area dispose its ValueSet acc

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.